# cargo-sidestep

./: Cargo.toml  LICENSE  README.md  research_prior_art_20260308.md
src/: lib.rs  main.rs
tests/: fake_cargo.sh  integration.rs
